# cdm_satellite_c

./: .gitignore  CMakeLists.txt  GoldCodeGenerator.c  Processor.c  SatelliteConfig.c  main.c  main.cpp
include/: GoldCodeGenerator.h  Processor.h  SatelliteConfig.h
src/: GoldCodeGenerator.c  Processor.c
